<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Switch
        android:id="@+id/control_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/bluetooth_on_off"
        android:textSize="22sp"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/frame_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:visibility="visible">

         <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/bluetooth_off"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/not_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_message"
            android:padding="8dp"
            android:text="@string/device_not_found"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:padding="8dp"
            android:scaleType="fitEnd"
            android:src="@drawable/handbag" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btn_enable_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/start_search" />

        <ProgressBar
            android:id="@+id/search_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <ListView
            android:id="@+id/bluetooth_devices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"></ListView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/CommunicationFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/bt_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/BtDisconnect"/>
    </RelativeLayout>


</LinearLayout>